--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       - DISPLAY=${DISPLAY} 
     volumes:
-      - ./:/root/catkin_ws/src
+      - ./../../src:/root/catkin_ws/src
       - /tmp/.X11-unix:/tmp/.X11-unix
       - /etc/localtime:/etc/localtime
     network_mode: host
