--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,9 @@ services:
     environment:
       - DISPLAY=${DISPLAY} 
     volumes:
-      - ./../../src:/root/catkin_ws/src
       - /tmp/.X11-unix:/tmp/.X11-unix
       - /etc/localtime:/etc/localtime
+      - ./catkin_ws/src:/root/catkin_ws/src
     network_mode: host
     stdin_open: true
     tty: true
