--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     environment:
       - DISPLAY=${DISPLAY} 
     volumes:
-      - ./../../src:/root/catkin_ws/src
+      - ./catkin_ws:/root/catkin_ws/src
       - /tmp/.X11-unix:/tmp/.X11-unix
       - /etc/localtime:/etc/localtime
     network_mode: host
